<resources>
    <string name="app_name">G-Note</string>
    <string name="title_activity_fast_browse">FastBrowse</string>
    <string name="brand_new">最新</string>
    <string name="micro_lesson">微课</string>
    <string name="add">添加</string>
    <string name="smart_pen">智能笔</string>
    <string name="account">我</string>
    <string name="order_by_name">按名称排序</string>
    <string name="order_by_time">按时间排序</string>
    <string name="open_bt">打开蓝牙</string>
    <string name="search">搜索设备</string>
    <string name="send_msg">发送消息</string>
    <string name="connect_error">连接失败</string>
    <string name="connect_success">智能笔连接成功</string>
    <string name="connecting">连接中</string>
    <string name="connect_state">连接状态</string>
    <string name="send_msgs">发送数据：</string>
    <string name="send_msg_error">发送数据失败：</string>
    <string name="get_msg">获取到数据：</string>
</resources>
